fixed strategy header - gap and font

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,12 +61,21 @@ body{
     margin-bottom: 72px;
 }
 .small-header{
-    font-weight: 500;
     font-size: 36px;
-    line-height: 1.2;
+    font-weight: 700;
+    line-height: 1.1;
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
+}
+
+
+@media screen and (min-height: 1158px){
+    .small-header {
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+    }
 }
 
 
@@ -544,7 +553,6 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 8px;
     margin-bottom: 0;
 }
 @media screen and (min-width:768px){
